# cubism-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
cubism-core-sys/: Cargo.toml  build.rs
cubism-core-sys/src/: draw.rs  lib.rs  logging.rs  moc.rs  model.rs
cubism-examples/: Cargo.toml
cubism-examples/src/: cubism_demo.rs  cubism_demo2.rs
cubism-gfx-renderer/: Cargo.toml
cubism-gfx-renderer/shader/: glsl.frag  glsl.vert
cubism-gfx-renderer/shader/gl/: 330.frag  330.vert
cubism-gfx-renderer/src/: lib.rs
src/: flags.rs  lib.rs  mem.rs
src/mdl/: moc.rs  mod.rs  model.rs
