[package]
name = "cubism"
version = "0.1.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
repository = "https://github.com/Veykril/cubism-rs"
homepage = "https://github.com/Veykril/cubism-rs"
license = "MIT"
description = git remote add origin https://github.com/Veykril/cubism-rs.git"
categories = ["api-bindings", "live2d", "cubism"]
readme = "README.md"

[dependencies]
cubism-core-sys = { version = "0.1.0", path = "cubism-core-sys"}
libc = "*"
serde_json = "1.0"
serde = "1.0.27"
serde_derive = "1.0.27"

[workspace]
members = ["cubism-core-sys", "cubism-examples", "cubism-gfx-renderer"]
