[package]
name = "cubism"
version = "0.1.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
repository = "https://github.com/Veykril/cubism-rs"
homepage = "https://github.com/Veykril/cubism-rs"
license = "MIT"
description = "A rust wrapper around the Live2D Cubism SDK with extra functionality."
categories = ["api-bindings", "live2d", "cubism"]
readme = "README.md"

[dependencies]
cubism-core-sys = { version = "0.1.0", path = "cubism-core-sys"}
libc = "0.2.42"
bitflags = "1.0.3"

[workspace]
members = ["cubism-core-sys", "cubism-examples", "cubism-gfx-renderer"]
