[package]
name = "cubism-core-sys"
version = "0.1.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
repository = "https://github.com/Veykril/cubism-rs"
homepage = "https://github.com/Veykril/cubism-rs"
description = "Live2d Cubism Core Library Rust Bindings"
keywords = ["live2d", "api-bindings", "cubism"]
license = "MIT"
categories = ["api-bindings", "cubism"]
build = "build.rs"

[lib]
name = "cubism_core_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2.42"
